2.6.0 - "Usability"
	* Autotools and packaging changes:
	  - Dropped version micro number for development versions
	  - Upgraded autoconf-archive macros to 2014-02-28 release
	* Changed build behaviours:
	  - 'make dist': now defaults to XZ compression
	  - curl-config: replaced by pkg-config
	* Changed minimum release requirements:
	  - FFmpeg/LibAV: raised minimum requirement to release 0.7
	  - FLAC: raised minimum requirement to release 1.1.3
	  - Berkeley DB: raised minimum requirement to release 4.1
	  - libcurl: raised minimum requirement to version 7.15.1
	  - autoconf: raised minimum requirement to version 2.64
	* Removed functionality:
	  - Transitional code from the previous release
	  - autogen.sh in favour of autoreconf(1)
	  - Deprecated ffmpeg-config support
	  - Warning of changed executable name
	* Changes to supported formats and codecs:
	  - VQF: now supported via FFmpeg/LibAV

2.5.0 - "Consolidation"
	* Autotools and packaging changes:
	  - Upgraded autoconf version requirement to 2.60
	  - Added '--with-alsa' to suppress ALSA sound driver inclusion
	  - Added '--without-oss' to suppress OSS sound driver inclusion
	  - Added '--disable-cache' to remove tags cache support
	  - Added specific GDB support to '--enable-debug'
	  - Refactor decoder plug-ins' autoconf scripts into source directories
	  - Ensure that all decoders get into the source distribution tarball
	  - Removed SID decoder's dependance on .la-file presence
	  - Removed distribution-specific .spec file
	  - Minor reformatting of the configure summary
	  - Added warnings for various deprecations and potential problems
	  - Added warnings for unmet future package requirements
	  - Updated GNU boilerplate text
	* Improved support for embedded systems:
	  - Refined FFmpeg decoder configuration for use with cross-compilation
	  - Provided use of Tremor with the Vorbis decoder
	  - Improve portability to non-GNU library platforms
	  - Added --with-libiconv-prefix configure option