@@ -32,7 +32,7 @@ int xwaddnstr (WINDOW *win, const char *str, const int n);
 int xmvwaddstr (WINDOW *win, const int y, const int x, const char *str);
 int xmvwaddnstr (WINDOW *win, const int y, const int x, const char *str,
 		const int n);
-#ifdef HAVE__ATTRIBUTE__
+#ifdef HAVE_FUNC_ATTRIBUTE_FORMAT
 int xwprintw (WINDOW *win, const char *fmt, ...)
 	__attribute__ ((format (printf, 2, 3)));
 #else
